--- a/Documentation/4x03.md
+++ b/Documentation/4x03.md
@@ -1,9 +1,13 @@
-## 📘 4.3 — GraphQL и OpenAPI
+# 🧱 Блок 4.3 — GraphQL и OpenAPI
+
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 4 — Интерфейсы и Интеграции
-* Блок 4.3 — GraphQL и OpenAPI
+* **Пакет:** 4 — Интерфейсы и Интеграции
+* **Блок:** 4.3 — GraphQL и OpenAPI
+
+---
 
 ## 🎯 Назначение
 
