--- a/Documentation/8x06.md
+++ b/Documentation/8x06.md
@@ -1,1 +1,20 @@
+# 8.6 — Кэширование планов и обратная связь по избирательности (Plan Caching & Selectivity Feedback)
 
+## 🏢 Идентификатор блока
+
+* Пакет 8 — Производительность
+* Блок 8.6 — Кэширование планов и обратная связь по избирательности
+
+## ✨ Назначение
+
+Данный блок отвечает за эффективное кэширование SQL-планов выполнения, а также за добавление обратной связи о фактических показателях избирательности (селективности) в систему оптимизации запросов.
+
+## ⚙️ Функциональность
+
+| Подсистема           | Реализация / особенности                        |
+| -------------------- | ----------------------------------------------- |
+| Кэш SQL-планов       | LRU-ориентированный, отдельный для read/write   |
+| Структуры планов     | HashMap\<query\_fingerprint, plan\_entry\_t>    |
+| Обновление статистик | feedback loop + фоновой процесс реанализа       |
+| Анализ селективности | по результатам runtime исполнения               |
+| Активная коррекция   | триггеры на девиацию в оценке NDV / cardinality |
